--- a/styles.css
+++ b/styles.css
@@ -17,49 +17,37 @@ footer {
 }
 
 .w {
-
+  background-image: url("images/tom1.png");
 }
 
 .a {
-
+  background-image: url("images/tom2.png");
 }
 
 .s {
-  
+  background-image: url("images/tom3.png");
 }
 
 .d {
-  
+  background-image: url("images/tom4.png");
 }
 
 .j {
-  
+  background-image: url("images/crash.png");
 }
 
 .k {
+  background-image: url("images/kick.png");
   
 }
 
 .l {
+  background-image: url("images/snare.png");
   
 }
 
 .set {
   margin: 10% auto;
-}
-
-.game-over {
-  background-color: red;
-  opacity: 0.8;
-}
-
-.pressed {
-  box-shadow: 0 3px 4px 0 #dfe4e6;
-  opacity: 0.5;
-}
-
-.red {
-  color: red;
 }
 
 .drum {
