Actually implementing the .pressed class in CSS...

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,11 @@ footer {
   margin: 10% auto;
 }
 
+.pressed {
+  box-shadow: 0 3px 4px 0 #dfe4e6;
+  opacity: 0.5;
+}
+
 .drum {
   outline: none;
   border: 10px solid #404B69;
