--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ footer {
 
 .set {
   margin: 10% auto;
+  user-select: none;
 }
 
 .pressed {
@@ -71,4 +72,5 @@ footer {
   text-align: center;
   margin: 10px;
   background-color: white;
+  user-select: none;
 }
